cmake_minimum_required(VERSION 3.21)
project(proyecto_1_eif204)

set(CMAKE_CXX_STANDARD 14)

add_executable(proyecto_1_eif204 main.cpp Object.h Asiento.cpp Asiento.h Nodo.h Nodo.cpp cmake-build-debug/Nodo.cpp Nodo.cpp Lista.h Lista.cpp Bus.h Bus.cpp RutaViaje.h RutaViaje.cpp Tiquete.h Tiquete.cpp DatosBus.h DatosBus.cpp)
